2008-01-04  Kouhei Sutou  <kou@cozmixng.org>

	* test/test_pad_template.rb, src/rbgst-pad-template.c,
	src/rbgst-pad-template.c: made GstStaticPadTemplate object.

	* src/rbgstpadtemplate.c: renamed to ...
	* src/rbgst-pad-template.c: ... this.

2008-01-03  Kouhei Sutou  <kou@cozmixng.org>

	* sample/gst-inspect.rb: implemented print_interfaces.

	* sample/gst-inspect.rb: implemented print_hierarchy.

	* src/rbgst-structure.c, test/test_structure.rb: added .parse.

	* src/rbgst-structure.c, test/test_structure.rb: added #to_s and
	#inspect.

	* src/rbgst-structure.c, test/test_structure.rb: added #have_field?.

	* src/rbgst-structure.c, test/test_structure.rb: added #nth_field_name.

	* src/rbgst-structure.c, test/test_structure.rb: added #size and
	#empty?.

	* src/rbgst-structure.c, test/test_structure.rb: added #collect!.

	* src/rbgst-structure.c, test/test_structure.rb: added #each.

	* src/rbgst-structure.c, test/test_structure.rb: added #delete and
	#clear.

2008-01-02  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgst-structure.c, test/test_structure.rb: added #[] and
	#[]=.

	* src/rbgst-structure.c, src/rbgst.[ch], test/test_message.rb,
	test/test_structure.rb: stopped conversion between GstStructure
	and Hash.

	* src/rbgst-structure.c, test/test_structure.rb: added #name=,
	#have_name?.

2008-01-01  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgstbin.c, src/rbgstclockentry.c: GST_CLOCK() -> RVAL2GST_CLOCK().

2007-11-11  Kouhei Sutou  <kou@cozmixng.org>

	* src/: expanded abbreviated macro name.

	* src/rbgst-plugin.c: supported source.
	* test/test_plugin.rb: added a test for source.

	* src/rbgst-plugin-feature.c: supported plugin_name.
	* test/test_plugin_feature.rb: added a test for plugin_name.

	* src/rbgst-plugin-feature.c: supported loaded?.
	* test/test_plugin_feature.rb: added a test for loaded?.

	* src/rbgst-message.c, src/rbgst-mini-object.c: used RGConvertTable.

	* src/rbgst-plugin-feature.c: supported rank.